# ymd

./: .gitignore  .gitlab-ci.yml  README.md  cli.py  file_utils.py  mail_utils.py  pyproject.toml  yahoomail.py  yahoomaildrive.py  ymd.py
.github/workflows/: release.yml
ymd/: cli.py  display.py  exceptions.py  file_utils.py  mail_utils.py  yahoomail.py  yahoomaildrive.py
