[project]
name = "ymd"
version = "0.1.0"
description = "YMD (Yahoo Mail Drive)"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = []

# Un exécutable "ymd" sera créé qui exécutera cli.main()
[project.scripts]
ymd = "ymd.cli:main"
