[project]
name = "ymd"
version = "0.1.9"
description = "YMD (Yahoo Mail Drive)"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
]
dependencies = []

# Un exécutable "ymd" sera créé qui exécutera cli.main()
[project.scripts]
ymd = "ymd.cli:main"
